# IrRelayDaemon

./: .gitignore  CMakeLists.txt  README.md  build_cmd.txt  main.cpp
constants/: hardware.h  network.h
network/: learning_service.h  presence_notifier.cpp  presence_notifier.h
services/: learning_service.cpp  learning_service.h  listening_service.cpp  listening_service.h  presence_notifier.cpp  presence_notifier.h  status_led_mgr.cpp  status_led_mgr.h
